@@ -1,5 +1,10 @@
 $Id$
 
+2014-07-19  Christian Franke  <franke@computer.org>
+
+	smartctl.8.in, smartd.8.in, update-smart-drivedb.8.in:
+	Add FILES section.
+
 2014-07-18  Christian Franke  <franke@computer.org>
 
 	configure.ac: Use 'email' instead of 'mail' on Cygwin.
